--- a/index.html
+++ b/index.html
@@ -8,29 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"> <!-- my stylesheet -->
-    <script src="script.js"></script> <!-- my javascript -->
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row border">
             <div class="col p-3">
-                <select class="form-select">
-                    <option>Select Division</option>
-                    <option>Championship Men</option>
-                    <option>Championship Women</option>
-                    <option>Division One Men</option>
-                    <option>Division One Women</option>
-                    <option>Division Two Men</option>
-                    <option>Division Two Women</option>
-                    <option>Victorian Youth Championship Men</option>
-                    <option>Victorian Youth Championship Women</option>
-                    <option>Youth League One Men</option>
-                    <option>Youth League One Women</option>
-                    <option>Youth League Two Men</option>
-                    <option>Youth League Two Women</option>
-                    <option>Youth League Three Men</option>
-
+                <select id="divisionSelect" class="form-select">
+                  <option value="">Select Division</option>
                 </select>
             </div>
             <div class="col p-3">
@@ -65,9 +50,9 @@
                 </select>
             </div>
         </div>
-        <div class="row">
+        <div class="row border">
             <div class="col p-3">
-                <table class="table table-striped table-light">
+                <table class="table table-striped border">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -99,7 +84,11 @@
                 </table>
             </div>
         </div>
+        <div class="row">
+        </div>
     </div>
+      <script type="module" src="script.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
