populating round select

--- a/index.html
+++ b/index.html
@@ -19,34 +19,14 @@
                 </select>
             </div>
             <div class="col p-3">
-                <select class="form-select">
+                <select id="seasonSelect" class="form-select" disabled>
                     <option>Select Season</option>
-                    <option>2025</option>
-                    <option>2024</option>
-                    <option>2023</option>
-                    <option>2022</option>
-                    <option>2021</option>
                 </select>
 
             </div>
             <div class="col p-3">
-                <select class="form-select">
+                <select id="roundSelect" class="form-select" disabled>
                     <option>Select Round</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
-            </div>
-            <div class="col p-3">
-                <select class="form-select">
-                    <option>Select Game</option>
-                    <option>McKinnon vs Keysborough (10th Aug | 8:00 PM) [90-74]</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
                 </select>
             </div>
         </div>
