--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Big V Weekly Player Stat Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"> <!-- my stylesheet -->
@@ -15,12 +15,15 @@
         <div class="row border">
             <div class="col p-3">
                 <select id="divisionSelect" class="form-select">
-                  <option value="">Select Division</option>
+                    <option value="">Select Division</option>
                 </select>
             </div>
             <div class="col p-3">
                 <select id="seasonSelect" class="form-select" disabled>
                     <option>Select Season</option>
+                    <div class="spinner-border spinner-border-sm" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
                 </select>
 
             </div>
@@ -32,42 +35,35 @@
         </div>
         <div class="row border">
             <div class="col p-3">
-                <table class="table table-striped border">
+                <table class="table table-striped border" id="statsTable">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Team</th>
+                            <th scope="col">MIN</th>
+                            <th scope="col">PTS</th>
+                            <th scope="col">FG%</th>
+                            <th scope="col">TS%</th>
+                            <th scope="col">PF</th>
+                            <th scope="col">+/-</th>
+                            <th scope="col">Eff</th>
+                            <th scope="col">GmSc</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
-                        </tr>
                     </tbody>
                 </table>
+                <div id="progressContainer" class="progress d-none" role="progressbar" aria-label="Round data loading" aria-valuemin="0"
+                    aria-valuemax="100">
+                    <div id="progressBar" class="progress-bar" style="width: 0%" aria-valuenow="0"></div>
+                </div>
             </div>
         </div>
         <div class="row">
         </div>
     </div>
-      <script type="module" src="script.js"></script>
+    <script type="module" src="script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
