started working on sortable table

--- a/api-testing.html
+++ b/api-testing.html
@@ -14,7 +14,7 @@
 <body>
   <button onclick="getCachedGameStatistics('e7ebf2b3-b6ee-11ef-85e8-a709c6662c39')">Get seasons</button>
   <button onclick="getCachedGameStatistics('e7ebf2b3-b6ee-11ef-85e8-a709c6662c39')">Get games</button>
-  <button onclick="myFunction('bib')">Test</button>
+  <button onclick="myFunction('model')">Test</button>
 
 
   <script>
@@ -86,7 +86,7 @@
       car.brand = "Toyota";
       car.model = "Corolla";
 
-      console.log(car.sortBy)
+      console.log(car[sortBy])
     }
 
   </script>
